--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <div class="images">
+        <img class="iphone" src="/images/phones.png" alt="phones" />
+        <nav>
+          <img src="/images/brand.png" alt="Instagram" />
+          <a href="#"> <img src="/images/home.png" alt="Home" /> Log in</a>
+        </nav>
+      </div>
+    </header>
+
+    <div class="text">
+      <h1>Capture and Share the World's Moments</h1>
+      <br />
+      <p>
+        Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your
+        life with friends and family.
+      </p>
+      <br />
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel,
+        then post to Instagram &mdash; it's that easy. You can even share to
+        Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <br />
+      <p>Oh yeah, did we mention it's free?</p>
+      <br />
+      <article>
+        <img src="/images/badge-iphone.png" alt="Download on the App Store" />
+        <img src="/images/badge-android.png" alt="Get it on Google Play" />
+      </article>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        &copy; 2014 Instagram
+      </ul>
+    </footer>
   </body>
 </html>
