Make a clone of the Instagram landing page

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
         <img src="./images/phones.png" alt="Two phones">
       </div>
 
-      <div class="logo-and-button">
-        <img src="/images/brand.png" alt="Instagram logo">
-        <button class="log-in-button">Log in</button>
-      </div>
-
-      <div class="text">
-        <h1>Capture and Share the World's Moments Instagram</h1>
-        <p>is a <span>fast, beautiful</span> and <span>fun</span> way to share your life with
-          friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>
-          Oh yeah, did we mention it's free?</p>
-          <img class="app-store-button" src="./images/badge-iphone.png" alt="App Store button">
-          <img class="app-store-button" src="./images/badge-android.png" alt="Google Play button">
+      <div class="logo-and-text">
+        <div class="logo-and-button">
+          <img src="/images/brand.png" class="insta-logo" alt="Instagram logo">
+          <button class="log-in-button">Log in</button>
+        </div>
+  
+        <div class="text">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <span>fast, beautiful</span> and <span>fun</span> way to share your life <br> with
+            friends and family.<br><br>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+            &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.<br><br>
+            Oh yeah, did we mention it's free?</p>
+            <img class="app-store-button" src="./images/badge-iphone.png" alt="App Store button">
+            <img class="app-store-button" src="./images/badge-android.png" alt="Google Play button">
+        </div>
       </div>
     </section>
        
@@ -41,8 +43,8 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
+        <li id="copy">&copy; 2014 Instagram</li>
       </ul>
-      <p>&copy; 2014 Instagram</p>
     </section>
 
   </body>
