--- a/index.html
+++ b/index.html
@@ -7,40 +7,47 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <section class="blue">
-    </section>
-    <section class="phones">
-      <img src="images/phones.png" alt="two phones">
-    </section>
-    <section class="insta-login">
-      <img src="images/brand.png" alt="insta icon">
-      <button>
-        <img src="images/home.png" alt="house">
-        Log in
-      </button>
-    </section>
-    <section class="information">
-      <h1>Capture and Share the World's Moments</h1>
-      <p>Instagram is a fast, beautiful and fun way to share your life with
-        friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-        <img src="images/badge-iphone.png" alt="app store">
-        <img src="images/badge-android.png" alt="Google play">
-    </section>
-    <footer>
-      <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-        <li>&copy; 2014 Instagram</li>
-      </ul>
-    </footer>
+    <section class="blue-background"></section>
+    <div class="move-up">
+      <section class="mains">
+        <section class="phones">
+          <img src="images/phones.png" alt="two phones">
+        </section>
+        <section class="insta-intro"> 
+          <section class="insta-login">
+            <img src="images/brand.png" alt="insta icon">
+            <div class="button">
+              <button>
+                <img src="images/home.png" alt="house">
+                Log in
+              </button>
+            </div>
+          </section>
+          <section class="information">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" alt="app store">
+            <img src="images/badge-android.png" alt="Google play">
+          </section>
+        </section>
+      </section>
+      <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
   </body>
 </html>
