--- a/index.html
+++ b/index.html
@@ -4,13 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    ,<link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="index">
+      <div id="phones"> 
+        <img src="./images/phones.png" alt="mobilephones">
+      </div>
+    <div id="everything">
+      <div id="navbar">
+        <div id="brand">
+        <img src="./images/brand.png" alt="instagramlogo">
+        </div>
+        <button id="login">
+         <img src="./images/home.png" alt="homebutton"> <p>Log In</p>
+      </button>
+      </div>
+      <div id="info">
+        <div id="text">
+     <h2>Capture and Share <br> the World's Moments</h2>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+    friends and family.</p> <br>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><br>
+    <p>Oh yeah, did we mention it's free?</p><br>
+    </div>
+    <a id="download">
+      <img src="./images/badge-iphone.png" alt="applestore"> <img src="./images/badge-android.png" alt="androidstore">
+    </a>
+    </div>
+    </div>
+    </section>
+
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+       </ul>
+
   </body>
 </html>
