--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="blue-box">
+    </section>
+    <section class="white-box">
+    </section>
+    <section class="main-section">
+      <div class="main-photo">
+        <img class="phones.photo" src="images/phones.png" alt="Instagram app">
+      </div>
+      <div class="main-content">
+        <div class="header">
+          <img class="instagram-logo" src="images/brand.png" alt="Instagram logo">
+          <button><img src="/images/home.png" alt="Log in icon"><span>Log in</span></button>
+        </div>
+        <div class="description">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br><br>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="app-stores">
+          <img src="/images/badge-iphone.png" alt="Badge iPhone">
+          <img src="/images/badge-android.png" alt="Badge Android">
+        </div>
+      </div>
+    </section>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+      <p>&copy; 2014 Instagram</p>
+    </footer>
   </body>
 </html>
