--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <!----------------------- TOP PART ----------------------------------------------->
+    <div class="top">
+      <div class = "images">
+        <img class = "logo"src="/images/brand.png" />
+        <button class = "button" type = "button"><img src = "images/home.png" />Log in</button>
+      </div>
+    </div>
+
+    <img class = "phones" src="/images/phones.png" />
+
+  <!----------------------- BOTTOM PART ----------------------------------------------->
+    <div class = "bottom">
+      <img  class = "frame" src="/images/frame.png" />
+      <div  class = "text">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.
+           <br><br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br><br>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+        <div class= "badges">
+          <img class = "apple" src = "images/badge-iphone.png">
+          <img src = "images/badge-android.png">
+        </div>
+      </div>
+    <!----------------------- FOOTER ----------------------------------------------->
+    <section class = "footer">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class ="copyright">&copy; 2014 Instagram</li>
+    </ul>
+    </section>
   </body>
 </html>
