--- a/index.html
+++ b/index.html
@@ -3,14 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" /> 
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class = "centered-items">
+    <div class = 'phone-overlapse'>
+      <img src = "./images/phones.png" alt = "Phones">
+    </div>
+
+    <section class = 'main-content'>
+      <div class = 'logo-and-login'>
+        <img src = "./images/brand.png" alt = "Instagram logo">
+
+        <a href="https://www.instagram.com/accounts/login/"><button class = 'login-button'><img src = "./images/home.png" alt = "Home button">Log in</button></a>
+      </div>
+    <div class = 'content-background'>
+      <div>
+        <h1><b>Capture and Share the World's Moments</b></h1>
+      <p>
+        Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+        friends and family.
+      </p>
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+       </p>
+       <p>
+        Oh yeah, did we mention it's free?
+       </p>
+      </div>
+
+      <div class = 'android-iphone'>
+        <img src = "./images/badge-iphone.png" alt = "Download on the App Store">
+
+        <img src = "./images/badge-android.png" alt = "Get it on Google Play">
+      </div>
+    </div>
+
+    </section>
+  </div>
+
+    <footer>
+      <ul>
+        <li><a href="https://about.instagram.com/"><b>About Us</b></a></li>
+        <li><a href="https://help.instagram.com/"><b>Support</b></a></li>
+        <li><a href="https://about.instagram.com/blog/"><b>Blog</b></a></li>
+        <li><a href="https://workmacro.com/instagram/4-ways-contact-instagram-support/#:~:text=And%20again%2C%20for%20professionals%20who,be%20most%20useful%20to%20them."><b>Press</b></a></li>
+        <li><a href="https://www.instagram.com/developer/"><b>API</b></a></li>
+        <li><a href="https://www.instagram.com/about/jobs/"><b>Jobs</b></a></li>
+        <li><a href="https://www.instagram.com/legal/privacy/"><b>Privacy</b></a></li>
+        <li><a href="https://www.instagram.com/legal/terms/"><b>Terms</b></a></li>
+        <li class = 'foot'><b>&copy; 2014 Instagram</b></li>
+      </ul>    
+    </footer>
   </body>
 </html>
