--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+    <div id = "background" class="background-blue"></div>
+    <div id="foreground">
+      <div class="non-main"></div>
+      <main>
+        <div id = "phones" class="container">
+          <img src="./images/phones.png" alt="phones">
+        </div>
+        <div id = "principal" class="container">
+          <header>
+            <img src="./images/brand.png" alt="band">
+            <div class="background-blue">
+              <input type="button" value="Log in">
+            </div>
+          </header>
+          <section>
+            <h1>Capture and Share the World's Moments</h1>
+            <article>
+              <p>Instagram is a fast, beautiful and fun way to share your life with
+                friends and family</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free? </p>
+            </article>
+            <div id = "store-button-footer">
+              <input type="button" id = "apple" class = "store-button" value="">
+              <input type="button" id = "android" class = "store-button" value="">
+            </div>
+          </section>
+        </div>
+      </main>
+      <footer class="non-main">
+        <nav></nav>
+      </footer>
+    </div>
+
+    <!-- Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
     Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Jobs Privacy Terms &copy; 2014 Instagram -->
   </body>
 </html>
