Em processo de conclusão

--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+<body>
+  <main>
+    <div class="divPhotoPhone">
+      <img src="./images/phones.png" alt="Photo Phone">
+    </div>
+    <section>
+      <div class="logoAndLogin">
+        <div>
+          <img src="./images/brand.png" alt="Logo Instagram">
+        </div>
+
+        <div>
+          <a href="https://www.instagram.com/?hl=pt-br"><button><img src="./images/home.png" alt="">Log in</button></a>
+        </div>
+      </div>
+
+      <div class="divTextRight">
+        <h1>Capture and Share the World's Moments</h1><br>
+        <p>
+          Instagram is a <strong>fast</strong>, strong <strong>beautiful</strong> and
+          <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <br>
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook,Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <br>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+        <br>
+        <div>
+        <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo" target="_blank"><img src="./images/badge-iphone.png" alt=""></a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3DE9E064FD-E8BD-4C75-B0C9-8922D323E6A2%26utm_content%3Dlo%26utm_medium%3Dbadge" target="_blank"><img src="./images/badge-android.png" alt=""></a>
+        </div>
+    </section>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="https://about.instagram.com/">About Us</a></li>
+      <li><a href="https://help.instagram.com/">Support</a></li>
+      <li><a href="https://about.instagram.com/blog/">Blog</a></li>
+      <li><a href="https://www.instagram.com/directory/profiles/">Top Accounts</a></li>
+      <li><a href="https://www.instagram.com/developer/">API</a></li>
+      <li><a href="https://about.instagram.com/about-us/careers">Jobs</a></li>
+      <li><a href="https://help.instagram.com/519522125107875">Privacy</a></li>
+      <li><a href="https://help.instagram.com/581066165581870">Terms</a></li>
+      <li class="copyInstagram">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
+</body>
+
 </html>
