--- a/index.html
+++ b/index.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<body class="container">
+
+  <section>
+    <div id="section-left">
+    <div class ="phone-body">
+      <img src="images/phones.png" alt="phones";>
+    </div>
+  </div>
+
+  
+  <div id="section-right">
+    <div class="logo-body">
+      <img src="images/brand.png">
+      <button type ="button"> 
+        <img src="images/home.png" />
+        <span>Log in</span>
+      </button>
+    </div>
+    <div class= "text-body">
+      <h3>Capture and Share the World's Moments</h3>
+      <p>
+      Instagram is a fast, beautiful and fun way to share your life with
+      friends and family.
+      </p>
+      <p> 
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+      - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p>
+      Oh yeah, did we mention it's free?
+      </p>
+      <img src="images/badge-iphone.png" alt="iphone">
+      <img src="images/badge-android.png" alt="android">
+     </div>
+  </div> 
+  </section>  
+
+<footer>
+  <nav>
+    <ul>
+      <li><a href="#"> About Us </a></li>
+        <li><a href="#"> Support </a></li>
+        <li><a href="#"> Blog </a></li>
+        <li><a href="#"> Press </a></li>
+        <li><a href="#"> API </a></li>
+        <li><a href="#"> Jobs </a></li>
+        <li><a href="#"> Privacy </a></li>
+        <li><a href="#"> Terms </a></li>
+        <li class="patent"> &copy; 2014 Instagram </li>        
+    </ul>
+  </nav>
+
+  
+</footer>
+</body>
+
 </html>
