Add pair name in PR

--- a/index.html
+++ b/index.html
@@ -25,14 +25,11 @@
       <div class="divTextRight">
         <h1>Capture and Share the World's Moments</h1><br>
         <p>
-          Instagram is a <strong>fast</strong>, strong <strong>beautiful</strong> and
-          <strong>fun</strong> way to share your life with friends and family.
+          Today, I have a son! His name is <strong>Dominic Herculano da Nóbrega</strong>. He's the most beautiful thing
         </p>
         <br>
         <p>
-          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
-          that
-          easy. You can even share to Facebook,Twitter, Tumblr and more. It's a new way to see the world.
+          My my family is perfect, I have a mother-in-law a little boring, but it is part of the luggage.
         </p>
         <br>
         <p>
