--- a/index.html
+++ b/index.html
@@ -7,116 +7,64 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <container>
-      <div>
-        <div>
-          <img
-            id="smartphones"
-            src="/images/phones.png"
-            alt="Two overlaid smartphones show the Instagram app. At one of them, filters are being chosen for a photo of a bridge."
-          />
-        </div>
-        <div>
-          <img
-            id="instagram-logo"
-            src="/images/brand.png"
-            alt="Instagram logo"
-          />
-          <button>
-            <img src="/images/home.png" alt="Home icon" />
-            Log in
-          </button>
-        </div>
-      </div>
-      <div>
-        <h1>Capture and Share the World's Moments</h1>
-        <p>
-          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
-          <strong>fun</strong> way to share your life with friends and family.
-        </p>
-        <p>
-          Take a picture or video, choose a filter to transform its look and
-          feel, then post to Instagram &mdash; it's that easy. You can even
-          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-          world.
-        </p>
-        <p>Oh yeah, did we mention it's free?</p>
-        <div class="download-app">
-          <img src="images/badge-iphone.png" alt="Download on the App Store" />
-          <img src="images/badge-android.png" alt="Get it on Google Play" />
-        </div>
-      </div>
-    </container>
-    <footer>
-      <div>
-        <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">API</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Privacy</a></li>
-          <li><a href="#">Terms</a></li>
-        </ul>
-      </div>
-      <div><span>&copy; 2014 Instagram</span></div>
-    </footer>
-  </body>
-</html>
-
-<!-- 
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
-  <body>
     <main>
-      <section>
+      <div class="header-img">
         <img
           src="/images/phones.png"
           alt="Two overlaid smartphones show the Instagram app. At one of them, filters are being chosen for a photo of a bridge."
         />
-      </section>
-      <section>
-        <header>
-          <img src="images/brand.png" alt="Instagram logo" />
-          <button><img src="images/home.png" alt="Home icon" />Log in</button>
-        </header>
-        <h1>Instagram Capture and Share the World's Moments</h1>
-        <p>
-          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
-          <strong>fun</strong> way to share your life with friends and family.
-        </p>
-        <p>
-          Take a picture or video, choose a filter to transform its look and
-          feel, then post to Instagram &mdash; it's that easy. You can even
-          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
-          world.
-        </p>
-        <p>Oh yeah, did we mention it's free?</p>
-        <img src="images/badge-iphone.png" alt="Download on the App Store" />
-        <img src="images/badge-android.png" alt="Get it on Google Play" />
-      </section>
+      </div>
+      <div>
+        <div>
+          <div class="instagram-logo">
+            <img src="images/brand.png" alt="Instagram logo" />
+          </div>
+          <div>
+            <a href="/login">
+              <button>
+                <img src="images/home.png" alt="Home icon" />
+                <span>Log in</span>
+              </button>
+            </a>
+          </div>
+        </div>
+        <div>
+          <h1>Instagram Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <span>fast</span>, <span>beautiful</span> and
+            <span>fun</span> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="download-buttons">
+            <a href="/download-ios">
+              <img
+                src="images/badge-iphone.png"
+                alt="Download on the App Store"
+              />
+            </a>
+            <a href="download-android">
+              <img src="images/badge-android.png" alt="Get it on Google Play" />
+            </a>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
-      <ul>
-        <li>About Us</li>
-        <li>Support</li>
-        <li>Blog</li>
-        <li>Press</li>
-        <li>API</li>
-        <li>Jobs</li>
-        <li>Privacy</li>
-        <li>Terms</li>
-      </ul>
-      &copy; 2014 Instagram
+      <a href="/about">About Us</a>
+      <a href="/support">Support</a>
+      <a href="/blog">Blog</a>
+      <a href="/press">Press</a>
+      <a href="/api">API</a>
+      <a href="/jobs">Jobs</a>
+      <a href="/privacy">Privacy</a>
+      <a href="/terms">Terms</a>
+      <span>&copy; 2014 Instagram</span>
     </footer>
   </body>
 </html>
-
--->
