--- a/index.html
+++ b/index.html
@@ -3,14 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/styles/style.css">
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="background" id="background-gradient-img"></div>
+      <article class="article">
+        <div class="article__img">
+            <img src="/images/phones.png" alt="">
+        </div>
+        <div class="interactions">
+          <section class="interactions__login">
+            <img class="interactions__img" src="/images/brand.png" alt="">
+            <a href="#"><img src="/images/home.png" alt=""> Log in</a>
+          </section>
+          <section class="cta">
+              <h1>Capture and Share the World's Moments</h1>
+              <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+                friends and family.</p> 
+              <p>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                
+              <p>Oh yeah, did we mention it's free?</p>
+          </section>
+          <section class="download">
+            <img src="/images/badge-iphone.png" alt="download app in the App Store">
+            <img src="/images/badge-android.png" alt="download app on Google play">
+          </section>
+        </div>
+      </article>
+    </main>
+    <footer class="footer">
+      <nav class="footer__nav">
+        <a href="#" target="_blank">ABOUT US</a>
+        <a href="#" target="_blank">SUPPORT</a>
+        <a href="#" target="_blank">BLOG</a>
+        <a href="#" target="_blank">PRESS</a>
+        <a href="#" target="_blank">API</a>
+        <a href="#" target="_blank">JOBS</a>
+        <a href="#" target="_blank">PRIVACY</a>
+        <a href="#" target="_blank">TERMS</a>
+      </nav>
+      <div class="footer__copywrite">&copy; 2014 Instagram</div>
+    </footer>
   </body>
 </html>
