--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="blue-bg"> 
+      <section class="main">
+        <section class="phoneimg">
+          <img src="images/phones.png" alt="phone images">
+        </section>  
+         
+        <section class="text">
+          <section class="login-container">
+              <img src="images/brand.png" alt="insta logo">
+              <button type="button" class="login-btn"><img src="images/home.png"> Log in</button>
+          </section>
+            
+          <section class="main-container">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+                friends and family.</p> 
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play </p>
+            <img class="download-img" src="images/badge-iphone.png" alt="AppleStore">
+            <img class="download-img" src="images/badge-android.png" alt="GooglePlay">
+          </section>
+        </section>
+    </section>
+
+      <footer class="footer">
+        <a href="">ABOUT US</a>
+        <a href="">SUPPORT</a>
+        <a href="">BLOG</a>
+        <a href="">PRESS</a>
+        <a href="">API</a>
+        <a href="">JOBS</a>
+        <a href="">PRIVACY TERMS</a>
+        &copy; 2014 Instagram
+      </footer>
+  </section>
   </body>
 </html>
