--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <!-- don't forget to link your styles -->
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+  <main class="main">
+    <section class="container">
+      <section class="phones">
+        <img class = "phoneimg" src="images/phones.png" alt="Two phones">
+      </section>
+      <section class="container2">
+        <section class="headInsta">
+          <img class="insta" src="images/brand.png" alt="Instagram">
+          <button class="login" href="#">
+            <img class="house" src="images/home.png" alt="Home icon">
+            <p>Log in</p>
+            </button>
+        </section>
+        <section class="textbg">
+          <section class="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+              friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the
+              world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </section>
+        </section>
+      </section>
+    </section>
+
+  </main>
+
+  <footer>
+    <section class="foot">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+    <p>&copy; 2014 Instagram</p>
+  </section>
+  </footer>
+
+</body>
+
 </html>
+
+<!-- <button class="login" href="#">
+  <img class="house" src="images/home.png" alt="Home icon">
+  <span>Log in</span>
+</button> -->
