Instagram App Design

--- a/index.html
+++ b/index.html
@@ -4,13 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="capture-share">
+      <article id="iphone-article">
+        <img src="images/phones.png" alt="Instagram Filters">
+      </article>
+      <article id="instagram-introduction">
+        <div id="instagram-logo-button">
+          <img class="instagram-logo" src="images/brand.png" alt="Instagram Logo">
+          <a class="log-in-button" href="/log-in/">
+            <img src="images/home.png" alt="Home icon">
+            <span>Log in</span>
+          </a>
+        </div>
+        <div class="introduction-paragraph">
+          <h1>Capture and Share<br> the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p> 
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <a href="https://apps.apple.com/us/app/instagram/id389801252"><img src="images/badge-iphone.png" alt="Download Instagram on Iphone"></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en&gl=US"><img src="images/badge-android.png" alt="Download Instagram on Android"></a>
+        </div>
+      </article>
+    </section>
+    <section id="footer">
+      <a href="/about-us/">About Us</a>
+      <a href="/support/">Support</a>
+      <a href="/blog/">Blog</a>
+      <a href="/press/">Press</a>
+      <a href="/api/">API</a>
+      <a href="/jobs/">Jobs</a>
+      <a href="/privacy/">Privacy</a>
+      <a href="/terms/">Terms</a>
+      <span>&copy; 2014 Instagram</span>
+    </section>
   </body>
 </html>
