--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Instagram Clone</title>
+        <link rel="stylesheet" href="styles/style.css">
+    </head>
+    <body>
+        <section>
+            <div>
+                <img src="images/phones.png" alt="Moviles">
+            </div>
+            <div class="box">
+                <nav>
+                    <img src="images/brand.png" alt="Logo de Instagram">
+                    <a href="#">
+                        <img class="home" src="images/home.png" alt="Home">
+                        Log In
+                    </a>
+                </nav>
+                <div class="square">
+                    <h1>Capture and Share <br> the World's Moments</h1>
+                    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>  way to share your life with
+                        friends and family.</p>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p>Oh yeah, did we mention it's free?</p>
+                    <div class="images">
+                        <img class="appstore" src="images/badge-iphone.png" alt="Descarga en App Store">
+                        <img src="images/badge-android.png" alt="Descarga en Google Play">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">API</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+            </ul>
+            <p class="copyright">&copy; 2014 Instagram</p>
+        </footer>
   </body>
 </html>
