--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+
+  <section class="mainInfo">
+    <div class="half" id="leftHalf">
+      <img src="images/phones.png" alt="phonesMocUp">
+    </div>
+
+    <div class="half" id="rightHalf">
+      <nav>
+        <a href="index.html"><img src="images/brand.png" alt="instagramLogo" id="igLogo"></a>
+        <form action="button">
+          <button id="loginButton"><img src="images/home.png" alt="homeLoginIcon"><p>Log in</p></button>
+        </form>
+      </nav>
+      <article>
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </article>
+      <div class="downloadApp">
+        <a href="#"><img src="images/badge-iphone.png" alt="downloadOnTheAppStore"></a>
+        <a href="#"><img src="images/badge-android.png" alt="getItOnGooglePlay"></a>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li id="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+</body>
+
 </html>
