--- a/index.html
+++ b/index.html
@@ -5,12 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="main-container" >
+      <section>
+        <img class="phones" src="images/phones.png" alt="imagenes iPhone">
+      </section>
+
+      <section>
+
+        <article class="logo-login-bar">
+          <img src="images/brand.png" alt="logo Instagram">
+          <a class="login-btn" href="#"><img class="home-icon" src="images/home.png" alt="icono home">Log in</a>
+        </article>
+
+        <article class="main-box">
+          <h1>Capture and Share <br> the World's Moments</h1>
+
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.</p>
+
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+          <p>Oh yeah, did we mention it's free?</p>
+          
+          <div>
+            <img class="app-store-icon" src="images/badge-iphone.png" alt="descarga App Store">
+            <img src="images/badge-android.png" alt="descarga Android">
+          </div>
+        </article>
+
+      </section>
+    </div>
+
+      <footer>
+       <ul class="footer-container">
+        <li><a href="#">about us</a></li>
+        <li><a href="#">support</a></li>
+        <li><a href="#">blog</a></li>
+        <li><a href="#">press</a></li>
+        <li><a href="#">api</a></li>
+        <li><a href="#">jobs</a></li>
+        <li><a href="#">privacy</a></li>
+        <li><a href="#">terms</a></li>
+        <li class="copyrigth">&copy; 2014 Instagram</li>
+       </ul>
+      </footer>
   </body>
 </html>
