--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="first-section">
+      <div>
+        <img src="./images/phones.png" alt="Iphone">
+      </div>
+
+      <div>
+        <div class="header">
+          <div>
+            <img src="./images/brand.png" alt="Instagram logo">
+          </div>
+          <button class="log-in">
+            <img src="./images/home.png" alt="button logo"> <p>Log in</p>
+          </button>
+        </div>
+      
+
+      <div class="box">
+        <div class="parrafo">
+        <h1>Capture and Share <br>the World's Moments</br></h1>
+        <p class="parrafo">Instagram is a <strong>fast, beautiful </strong>and <strong>fun</strong> way to share your life withfriends and family.</p>
+        <p class="parrafo">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p class="parrafo">Oh yeah, did we mention it's free?</p>
+      </div>
+
+      <div class="botones">
+        <img src="./images/badge-iphone.png" alt="download iphone">
+        <img src="./images/badge-android.png" alt="download android">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+    <footer>
+      <ul>
+        <li>About us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>Api</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="list-element">2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
