todo menos el boton

--- a/index.html
+++ b/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="styles/style.css">
+</head>
+ <body>
+   <section class="display">
+     <div class="tile-grid" data-role="tile" data-size="small">
+    <img class="azul" src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/bgtile.png" alt="fondo azul">
+     </div>
+     <section class="iphones">
+        <img src="https://raw.githubusercontent.com/ironhack-labs/lab-css-instagram-clone/master/images/phones.png" alt="moviles">
+      </section>
+        <section class="cuerpo">
+        <div class="header">
+            <img class="logo" src="https://raw.githubusercontent.com/guillemu11/lab-css-instagram-clone/master/images/brand.png" alt="logo">
+              <div class="boton">
+            <a href="#">Log in <img src="/images/home.png" alt="home"> </a>
+              </div>
+         </div>
+         <article>
+             <h1>Capture and Share the World's moments</h1>
+             <p class="parrafo">Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+                friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p>Oh yeah, did we mention it's free?</p>                        
+         <div class="descargar">
+             <a href="#"> <img src="https://raw.githubusercontent.com/guillemu11/lab-css-instagram-clone/master/images/badge-iphone.png" alt="logo iphone"></a>
+             <a href="#"><img src="https://raw.githubusercontent.com/guillemu11/lab-css-instagram-clone/master/images/badge-android.png" alt="badge-android"></a>
+         </div>
+         </article>
+    </section>
+   </section>
+<footer>
+    <div>
+        <ul>
+            <li><a href="#">About Us </a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Api</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li class="terms"> Jobs Privacy Terms &copy; 2014 Instagram</li>
+        </ul>
+    </div>
+</footer>
+ </body>
 </html>
