--- a/index.html
+++ b/index.html
@@ -4,13 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section>
+
+      <div class="block">
+        <img src="images/phones.png" alt="Phones Image">
+      </div>
+
+      <div class="block">
+        <div class="block2">
+          <a href="#">
+            <img src="images/brand.png" alt="Instagram Brand">
+          </a>
+          
+          <a href="#" class="logbtn"><img src="images/home.png">Log in</a>
+          
+        </div>
+
+        <div>
+          <article>
+            <h2>Capture and Share<br> 
+              the World's Moments</h2>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life<br> 
+              with friends and family.
+            </p>
+            <p>Take a picture or video, choose a filter to transform its look<br> 
+              and fell, then post to Instagram - it's that easy. You can<br> 
+              even share to Facebook, Twitter, Tumblr and more. It's a<br> 
+              new way to see the world. 
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </article>
+
+          <nav class="badge-nav">
+            <a href="#"><img src="images/badge-iphone.png" alt="Iphone Badge"></a>
+            <a href="#"><img src="images/badge-android.png" alt="Android Badge"></a>
+          </nav>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <nav class="nav-bar">
+        <ul class="nav-bar-ul">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Api</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="last">2021 Instagram</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
