--- a/index.html
+++ b/index.html
@@ -4,13 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <div class="maincontent">
+
+      <section class="iphone">
+        <img src="images/phones.png" alt="Iphone screen">
+      </section>
+
+      <section class="information">
+        <article class="nav">
+         <img class="logo" src="images/brand.png" alt="Instagram logo">
+         <button class="login" > <img class="home" src="images/home.png"> Log in</button>
+        </article>
+      
+        <article class="description">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p> Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div class="storebuttons">
+          <a><img class="appstoreapple" src="images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a><img class="appstoreandroid" src="images/badge-android.png" alt="Get it on Google Play"></a>
+          </div>
+        </article>
+
+      </section>
+
+    </div>
+
+    <div class="footer-menu">
+      <footer>
+        <ul>
+          <li>About us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>Api</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="grey-menu">@ 2014 Instagram</li>
+        </ul>
+      </footer>
+    </div>
   </body>
 </html>
